src/ref/raylib.h

    typedef enum { false, true } bool;
typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector3 {
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef RenderTexture RenderTexture2D;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
typedef Camera3D Camera;    
typedef struct Camera2D {
    Vector2 offset;         
    Vector2 target;         
    float rotation;         
    float zoom;             
} Camera2D;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef enum {
    FLAG_VSYNC_HINT         = 0x00000040,   
    FLAG_FULLSCREEN_MODE    = 0x00000002,   
    FLAG_WINDOW_RESIZABLE   = 0x00000004,   
    FLAG_WINDOW_UNDECORATED = 0x00000008,   
    FLAG_WINDOW_HIDDEN      = 0x00000080,   
    FLAG_WINDOW_MINIMIZED   = 0x00000200,   
    FLAG_WINDOW_MAXIMIZED   = 0x00000400,   
    FLAG_WINDOW_UNFOCUSED   = 0x00000800,   
    FLAG_WINDOW_TOPMOST     = 0x00001000,   
    FLAG_WINDOW_ALWAYS_RUN  = 0x00000100,   
    FLAG_WINDOW_TRANSPARENT = 0x00000010,   
    FLAG_WINDOW_HIGHDPI     = 0x00002000,   
    FLAG_MSAA_4X_HINT       = 0x00000020,   
    FLAG_INTERLACED_HINT    = 0x00010000    
} ConfigFlag;
typedef enum {
    LOG_ALL = 0,        
    LOG_TRACE,
    LOG_DEBUG,
    LOG_INFO,
    LOG_WARNING,
    LOG_ERROR,
    LOG_FATAL,
    LOG_NONE            
} TraceLogType;
typedef enum {
    KEY_APOSTROPHE      = 39,
    KEY_COMMA           = 44,
    KEY_MINUS           = 45,
    KEY_PERIOD          = 46,
    KEY_SLASH           = 47,
    KEY_ZERO            = 48,
    KEY_ONE             = 49,
    KEY_TWO             = 50,
    KEY_THREE           = 51,
    KEY_FOUR            = 52,
    KEY_FIVE            = 53,
    KEY_SIX             = 54,
    KEY_SEVEN           = 55,
    KEY_EIGHT           = 56,
    KEY_NINE            = 57,
    KEY_SEMICOLON       = 59,
    KEY_EQUAL           = 61,
    KEY_A               = 65,
    KEY_B               = 66,
    KEY_C               = 67,
    KEY_D               = 68,
    KEY_E               = 69,
    KEY_F               = 70,
    KEY_G               = 71,
    KEY_H               = 72,
    KEY_I               = 73,
    KEY_J               = 74,
    KEY_K               = 75,
    KEY_L               = 76,
    KEY_M               = 77,
    KEY_N               = 78,
    KEY_O               = 79,
    KEY_P               = 80,
    KEY_Q               = 81,
    KEY_R               = 82,
    KEY_S               = 83,
    KEY_T               = 84,
    KEY_U               = 85,
    KEY_V               = 86,
    KEY_W               = 87,
    KEY_X               = 88,
    KEY_Y               = 89,
    KEY_Z               = 90,
    KEY_SPACE           = 32,
    KEY_ESCAPE          = 256,
    KEY_ENTER           = 257,
    KEY_TAB             = 258,
    KEY_BACKSPACE       = 259,
    KEY_INSERT          = 260,
    KEY_DELETE          = 261,
    KEY_RIGHT           = 262,
    KEY_LEFT            = 263,
    KEY_DOWN            = 264,
    KEY_UP              = 265,
    KEY_PAGE_UP         = 266,
    KEY_PAGE_DOWN       = 267,
    KEY_HOME            = 268,
    KEY_END             = 269,
    KEY_CAPS_LOCK       = 280,
    KEY_SCROLL_LOCK     = 281,
    KEY_NUM_LOCK        = 282,
    KEY_PRINT_SCREEN    = 283,
    KEY_PAUSE           = 284,
    KEY_F1              = 290,
    KEY_F2              = 291,
    KEY_F3              = 292,
    KEY_F4              = 293,
    KEY_F5              = 294,
    KEY_F6              = 295,
    KEY_F7              = 296,
    KEY_F8              = 297,
    KEY_F9              = 298,
    KEY_F10             = 299,
    KEY_F11             = 300,
    KEY_F12             = 301,
    KEY_LEFT_SHIFT      = 340,
    KEY_LEFT_CONTROL    = 341,
    KEY_LEFT_ALT        = 342,
    KEY_LEFT_SUPER      = 343,
    KEY_RIGHT_SHIFT     = 344,
    KEY_RIGHT_CONTROL   = 345,
    KEY_RIGHT_ALT       = 346,
    KEY_RIGHT_SUPER     = 347,
    KEY_KB_MENU         = 348,
    KEY_LEFT_BRACKET    = 91,
    KEY_BACKSLASH       = 92,
    KEY_RIGHT_BRACKET   = 93,
    KEY_GRAVE           = 96,
    KEY_KP_0            = 320,
    KEY_KP_1            = 321,
    KEY_KP_2            = 322,
    KEY_KP_3            = 323,
    KEY_KP_4            = 324,
    KEY_KP_5            = 325,
    KEY_KP_6            = 326,
    KEY_KP_7            = 327,
    KEY_KP_8            = 328,
    KEY_KP_9            = 329,
    KEY_KP_DECIMAL      = 330,
    KEY_KP_DIVIDE       = 331,
    KEY_KP_MULTIPLY     = 332,
    KEY_KP_SUBTRACT     = 333,
    KEY_KP_ADD          = 334,
    KEY_KP_ENTER        = 335,
    KEY_KP_EQUAL        = 336
} KeyboardKey;
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI bool WindowShouldClose(void);                               
RLAPI void CloseWindow(void);                                     
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowFullscreen(void);                              
RLAPI bool IsWindowHidden(void);                                  
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowMaximized(void);                               
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowState(unsigned int flag);                      
RLAPI void SetWindowState(unsigned int flags);                    
RLAPI void ClearWindowState(unsigned int flags);                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void MaximizeWindow(void);                                  
RLAPI void MinimizeWindow(void);                                  
RLAPI void RestoreWindow(void);                                   
RLAPI void SetWindowIcon(Image image);                            
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI Vector2 GetMonitorPosition(int monitor);                    
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI int GetMonitorRefreshRate(int monitor);                     
RLAPI Vector2 GetWindowPosition(void);                            
RLAPI Vector2 GetWindowScaleDPI(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI void SetClipboardText(const char *text);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI void ShowCursor(void);                                      
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI bool IsCursorOnScreen(void);                                
RLAPI void ClearBackground(Color color);                          
RLAPI void BeginDrawing(void);                                    
RLAPI void EndDrawing(void);                                      
RLAPI void BeginMode2D(Camera2D camera);                          
RLAPI void EndMode2D(void);                                       
RLAPI void BeginMode3D(Camera3D camera);                          
RLAPI void EndMode3D(void);                                       
RLAPI void BeginTextureMode(RenderTexture2D target);              
RLAPI void EndTextureMode(void);                                  
RLAPI void BeginScissorMode(int x, int y, int width, int height); 
RLAPI void EndScissorMode(void);                                  
RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);      
RLAPI Matrix GetCameraMatrix(Camera camera);                      
RLAPI Matrix GetCameraMatrix2D(Camera2D camera);                  
RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera);  
RLAPI Vector2 GetWorldToScreenEx(Vector3 position, Camera camera, int width, int height); 
RLAPI Vector2 GetWorldToScreen2D(Vector2 position, Camera2D camera); 
RLAPI Vector2 GetScreenToWorld2D(Vector2 position, Camera2D camera); 
RLAPI void SetTargetFPS(int fps);                                 
RLAPI int GetFPS(void);                                           
RLAPI float GetFrameTime(void);                                   
RLAPI double GetTime(void);                                       
RLAPI void SetConfigFlags(unsigned int flags);                    
RLAPI void SetTraceLogLevel(int logType);                         
RLAPI void SetTraceLogExit(int logType);                          
RLAPI void SetTraceLogCallback(TraceLogCallback callback);        
RLAPI void TraceLog(int logType, const char *text, ...);          
RLAPI void *MemAlloc(int size);                                   
RLAPI void MemFree(void *ptr);                                    
RLAPI void TakeScreenshot(const char *fileName);                  
RLAPI int GetRandomValue(int min, int max);                       
RLAPI unsigned char *LoadFileData(const char *fileName, unsigned int *bytesRead);     
RLAPI void UnloadFileData(unsigned char *data);                   
RLAPI bool SaveFileData(const char *fileName, void *data, unsigned int bytesToWrite); 
RLAPI char *LoadFileText(const char *fileName);                   
RLAPI void UnloadFileText(unsigned char *text);                   
RLAPI bool SaveFileText(const char *fileName, char *text);        
RLAPI bool FileExists(const char *fileName);                      
RLAPI bool DirectoryExists(const char *dirPath);                  
RLAPI bool IsFileExtension(const char *fileName, const char *ext);
RLAPI const char *GetFileExtension(const char *fileName);         
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetFileNameWithoutExt(const char *filePath);    
RLAPI const char *GetDirectoryPath(const char *filePath);         
RLAPI const char *GetPrevDirectoryPath(const char *dirPath);      
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);  
RLAPI void ClearDirectoryFiles(void);                             
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsFileDropped(void);                                   
RLAPI char **GetDroppedFiles(int *count);                         
RLAPI void ClearDroppedFiles(void);                               
RLAPI long GetFileModTime(const char *fileName);                  
RLAPI unsigned char *CompressData(unsigned char *data, int dataLength, int *compDataLength);        
RLAPI unsigned char *DecompressData(unsigned char *compData, int compDataLength, int *dataLength);  
RLAPI bool SaveStorageValue(unsigned int position, int value);    
RLAPI int LoadStorageValue(unsigned int position);                
RLAPI void OpenURL(const char *url);                              
RLAPI bool IsKeyPressed(int key);                             
RLAPI bool IsKeyDown(int key);                                
RLAPI bool IsKeyReleased(int key);                            