src/raylib/RayLib3.pas


  // Initialize window and OpenGL context
  InitWindow: procedure(Width: Integer; Height: Integer; const Title: PUTF8Char); cdecl;
  // Check if KEY_ESCAPE pressed or Close icon pressed
  WindowShouldClose: function: Boolean; cdecl;
  // Close window and unload OpenGL context
  CloseWindow: procedure; cdecl;
  // Check if window has been initialized successfully
  IsWindowReady: function: Boolean; cdecl;
  // Check if window is currently fullscreen
  IsWindowFullscreen: function: Boolean; cdecl;
  // Check if window is currently hidden (only PLATFORM_DESKTOP)
  IsWindowHidden: function: Boolean; cdecl;
  // Check if window has been minimized (or lost focus)
  IsWindowMinimized: function: Boolean; cdecl;
  // Check if window is currently maximized (only PLATFORM_DESKTOP)
  IsWindowMaximized: function: Boolean; cdecl;
  // Check if window has been resized
  IsWindowResized: function: Boolean; cdecl;
  // Check if one specific window flag is enabled
  IsWindowState: function(flag: Cardinal): Boolean; cdecl;
  // Set window configuration state using flags
  SetWindowState: procedure(flag: Cardinal); cdecl;
  // Clear window configuration state flags
  ClearWindowState: procedure(flag: Cardinal); cdecl;
  // Toggle window state: fullscreen/windowed (only PLATFORM_DESKTOP)
  ToggleFullscreen: procedure; cdecl;
  // Set window state: maximized, if resizable (only PLATFORM_DESKTOP)
  MaximizeWindow: procedure; cdecl;
  // Set window state: minimized, if resizable (only PLATFORM_DESKTOP)
  MinimizeWindow: procedure; cdecl;
  // Set window state: not minimized/maximized (only PLATFORM_DESKTOP)
  RestoreWindow : procedure; cdecl;
  // Set icon for window (only PLATFORM_DESKTOP)
  SetWindowIcon: procedure(image: TImage); cdecl;
  // Set title for window (only PLATFORM_DESKTOP)
  SetWindowTitle: procedure(const title: PUTF8Char); cdecl;
  // Set window position on screen (only PLATFORM_DESKTOP)
  SetWindowPosition: procedure(x: Integer; y: Integer); cdecl;
  // Set monitor for the current window (fullscreen mode)
  SetWindowMonitor: procedure(monitor: Integer); cdecl;
  // Set window minimum dimensions (for FLAG_WINDOW_RESIZABLE)
  SetWindowMinSize: procedure(width: Integer; height: Integer); cdecl;
  // Set window dimensions
  SetWindowSize: procedure(width: Integer; height: Integer); cdecl;
  // Get native window handle
  GetWindowHandle: function: Pointer; cdecl;
  // Get current screen width
  GetScreenWidth: function: Integer; cdecl;
  // Get current screen height
  GetScreenHeight: function: Integer; cdecl;
  // Get number of connected monitors
  GetMonitorCount: function: Integer; cdecl;
  // Get specified monitor position
  GetMonitorPosition: function(monitor: Integer): TVector2; cdecl;
  // Get primary monitor width
  GetMonitorWidth: function(monitor: Integer): Integer; cdecl;
  // Get primary monitor height
  GetMonitorHeight: function(monitor: Integer): Integer; cdecl;
  // Get primary monitor physical width in millimetres
  GetMonitorPhysicalWidth: function(monitor: Integer): Integer; cdecl;
  // Get primary monitor physical height in millimetres
  GetMonitorPhysicalHeight: function(monitor: Integer): Integer; cdecl;
  // Get specified monitor refresh rate
  GetMonitorRefreshRate: function(monitor: Integer): Integer; cdecl;
  // Get window position XY on monitor
  GetWindowPosition: function(monitor: Integer): TVector2; cdecl;
  // Get window scale DPI factor
  GetWindowScaleDPI: function(monitor: Integer): TVector2; cdecl;
  // Get the human-readable, UTF-8 encoded name of the primary monitor
  GetMonitorName: function(monitor: Integer): PUTF8Char; cdecl;
  // Set clipboard text content
  SetClipboardText: procedure(const text: PUTF8Char); cdecl;
  // Get clipboard text content
  GetClipboardText: function: PUTF8Char; cdecl;

  { Cursor-related functions }

  // Shows cursor
  ShowCursor: procedure; cdecl;
  // Hides cursor
  HideCursor: procedure; cdecl;
  // Check if cursor is not visible
  IsCursorHidden: function: Boolean; cdecl;
  // Enables cursor (unlock cursor)
  EnableCursor: procedure; cdecl;
  // Disables cursor (lock cursor)
  DisableCursor: procedure; cdecl;
  // Check if cursor is on the current screen.
  IsCursorOnScreen: function: Boolean; cdecl;

  { Drawing-related functions }

  // Set background color (framebuffer clear color)
  ClearBackground: procedure(color: TColor); cdecl;
  // Setup canvas (framebuffer) to start drawing
  BeginDrawing: procedure; cdecl;
  // End canvas drawing and swap buffers (double buffering)
  EndDrawing: procedure; cdecl;
  // Initialize 2D mode with custom camera (2D)
  BeginMode2D: procedure(camera: TCamera2D); cdecl;
  // Ends 2D mode with custom camera
  EndMode2D: procedure; cdecl;
  // Initializes 3D mode with custom camera (3D)
  BeginMode3D: procedure(camera: TCamera3D); cdecl;
  // Ends 3D mode and returns to default 2D orthographic mode
  EndMode3D: procedure; cdecl;
  // Initializes render texture for drawing
  BeginTextureMode: procedure(target: TRenderTexture2D); cdecl;
  // Ends drawing to render texture
  EndTextureMode: procedure; cdecl;
  // Begin scissor mode (define screen area for following drawing)
  BeginScissorMode: procedure(x: Integer; y: Integer; width: Integer; height: Integer); cdecl;
  // End scissor mode
  EndScissorMode: procedure; cdecl;

  { Screen-space-related functions }

  // Returns a ray trace from mouse position
  GetMouseRay: function(mousePosition: TVector2; camera: TCamera): TRay; cdecl;
  // Returns camera transform matrix (view matrix)
  GetCameraMatrix: function(camera: TCamera): TMatrix; cdecl;
  // Returns camera 2d transform matrix
  GetCameraMatrix2D: function(camera: TCamera2D): TMatrix; cdecl;
  // Returns the screen space position for a 3d world space position
  GetWorldToScreen: function(position: TVector3; camera: TCamera): TVector2; cdecl;
  // Returns size position for a 3d world space position
  GetWorldToScreenEx: function(position: TVector3; camera: TCamera; width: Integer; height: Integer): TVector2; cdecl;
  // Returns the screen space position for a 2d camera world space position
  GetWorldToScreen2D: function(position: TVector2; camera: TCamera2D): TVector2; cdecl;
  // Returns the world space position for a 2d camera screen space position
  GetScreenToWorld2D: function(position: TVector2; camera: TCamera2D): TVector2; cdecl;

  { Timing-related functions }

  // Set target FPS (maximum)
  SetTargetFPS: procedure(fps: Integer); cdecl;
  // Returns current FPS
  GetFPS: function: Integer; cdecl;
  // Returns time in seconds for last frame drawn
  GetFrameTime: function: Single; cdecl;
  // Returns elapsed time in seconds since InitWindow()
  GetTime: function: Double; cdecl;

  { Misc. functions }

  // Setup window configuration flags (view FLAGS)
  SetConfigFlags: procedure(flags: Cardinal); cdecl;
  // Set the current threshold (minimum) log level
  SetTraceLogLevel: procedure(logType: TTraceLogTypes); cdecl;
  // Set the exit threshold (minimum) log level
  SetTraceLogExit: procedure(logType: Integer); cdecl;
  // Set a trace log callback to enable custom logging
  SetTraceLogCallback: procedure(callback: TTraceLogCallback); cdecl;
  // Show trace log messages (LOG_DEBUG, LOG_INFO, LOG_WARNING, LOG_ERROR)
  TraceLog: procedure(logType: Integer; const text: PUTF8Char) varargs; cdecl;

  // Internal memory allocator
  MemAlloc: function(Size: Integer): Pointer; cdecl;
  // Internal memory free
  MemFree: procedure(ptr: Pointer); cdecl;
  // Takes a screenshot of current screen (saved a .png)
  TakeScreenshot: procedure(const fileName: PUTF8Char); cdecl;
  // Returns a random value between min and max (both included)
  GetRandomValue: function(min: Integer; max: Integer): Integer; cdecl;

  { Files management functions }

  // Load file data as byte array (read)
  LoadFileData: function(const fileName: PUTF8Char; bytesRead: PCardinal): PByte; cdecl;
  // Unload file data allocated by LoadFileData()
  UnloadFileData: procedure(Data: PByte); cdecl;
  // Save data to file from byte array (write)
  SaveFileData: procedure(const fileName: PUTF8Char; data: Pointer; bytesToWrite: Cardinal); cdecl;
  // Load text data from file (read), returns a '\0' terminated string
  LoadFileText: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
  // Unload file text data allocated by LoadFileText()
  UnloadFileText: procedure(Text: PUTF8Char); cdecl;
  // Save text data to file (write), string must be '\0' terminated
  SaveFileText: procedure(const fileName: PUTF8Char; text: PUTF8Char); cdecl;
  // Check if file exists
  FileExists: function(const fileName: PUTF8Char): Boolean; cdecl;
  // Check if a directory path exists
  DirectoryExists: function(const dirPath: PUTF8Char): Boolean; cdecl;
  // Check file extension
  IsFileExtension: function(const fileName: PUTF8Char; const ext: PUTF8Char): Boolean; cdecl;
  // Get pointer to extension for a filename string
  GetFileExtension: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
  // Get pointer to filename for a path string
  GetFileName: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get filename string without extension (uses static string)
  GetFileNameWithoutExt: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get full path for a given fileName with path (uses static string)
  GetDirectoryPath: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get previous directory path for a given path (uses static string)
  GetPrevDirectoryPath: function(const dirPath: PUTF8Char): PUTF8Char; cdecl;
  // Get current working directory (uses static string)
  GetWorkingDirectory: function: PUTF8Char; cdecl;
  // Get filenames in a directory path (memory should be freed)
  GetDirectoryFiles: function(const dirPath: PUTF8Char; count: PInteger): PPUTF8Char; cdecl;
  // Clear directory files paths buffers (free memory)
  ClearDirectoryFiles: procedure; cdecl;
  // Change working directory, returns true if success
  ChangeDirectory: function(const dir: PUTF8Char): Boolean; cdecl;
  // Check if a file has been dropped into window
  IsFileDropped: function: Boolean; cdecl;
  // Get dropped files names (memory should be freed)
  GetDroppedFiles: function(count: PInteger): PPUTF8Char; cdecl;
  // Clear dropped files paths buffer (free memory)
  ClearDroppedFiles: procedure; cdecl;
  // Get file modification time (last write time)
  GetFileModTime: function(const fileName: PUTF8Char): Integer; cdecl;

  // Compress data (DEFLATE algorythm)
  CompressData: function(data: PByte; dataLength: Integer; compDataLength: PInteger): PByte; cdecl;
  // Decompress data (DEFLATE algorythm)
  DecompressData: function(compData: PByte; compDataLength: Integer; dataLength: PInteger): PByte; cdecl;

  { Persistent storage management }

  // Save integer value to storage file (to defined position)
  SaveStorageValue: function(position: Cardinal; value: Integer): Boolean; cdecl;
  // Load integer value from storage file (from defined position)
  LoadStorageValue: function(position: Cardinal): Integer; cdecl;

  // Open URL with default system browser (if available)
  OpenURL: procedure(const url: PUTF8Char); cdecl;

//------------------------------------------------------------------------------------
// Input Handling Functions (Module: core)
//------------------------------------------------------------------------------------

  { Input-related functions: keyboard }

  // Detect if a key has been pressed once
  IsKeyPressed: function(key: Integer): Boolean; cdecl;
  // Detect if a key is being pressed
  IsKeyDown: function(key: Integer): Boolean; cdecl;
  // Detect if a key has been released once
  IsKeyReleased: function(key: Integer): Boolean; cdecl;
